[package]
name = "qua"
version = "0.1.0"
authors = ["Emory Petermann [emory@radium.io]"]
edition = "2018"

[dependencies]
crossterm = "0.19.0"
ctrlc = "3.1.7"
cursive = { version = "0.16.3", default-features = false, features = ["crossterm-backend"] }
cursive-multiplex = { git = "https://github.com/deinstapel/cursive-multiplex" }
cursive_buffered_backend = { git = "https://github.com/gyscos/cursive_buffered_backend" }
